deploy/resources/base/test-connection.yml
# Source: kube-review/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-connection
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget0
      image: busybox
      command: ['wget']
      args: ['url']
  restartPolicy: Never
